# gnome-icon-preview

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .vala-lint.conf  Cargo.toml  LICENSE  README.md  app-icon-preview.doap  graphene.json  gtk4.json  icon-preview.doap  icon-tool.doap  iconpreview.doap  icons.vala  meson.build  meson_options.txt  org.gnome.IconPreview.json  org.gnome.design.AppIconPreview.json  org.gnome.design.IconPreview.json  wayland.json
build-aux/: cargo.sh  org.gnome.design.AppIconPreviewDevel.json
data/: meson.build  org.gnome.IconPreview.Palette.desktop.in  org.gnome.IconPreview.Palette.service.in  org.gnome.IconPreview.appdata.xml.in  org.gnome.IconPreview.desktop.in  org.gnome.IconPreview.service.in  org.gnome.design.AppIconPreview.desktop.in.in  org.gnome.design.AppIconPreview.gschema.xml.in  org.gnome.design.AppIconPreview.metainfo.xml.in.in  org.gnome.design.AppIconPreview.service.in  org.gnome.design.IconPreview.appdata.xml.in  org.gnome.design.IconPreview.desktop.in  org.gnome.design.IconPreview.desktop.in.in  org.gnome.design.IconPreview.metainfo.xml.in.in  org.gnome.design.IconPreview.service.in  resources.gresource.xml
data/resources/: style.css
data/resources/ui/: about_dialog.ui.in  colourpane.ui  export.ui  help-overlay.ui  menus.ui  new_project.ui  recentrow.ui  recents.ui  recents_popover.ui  screenshot_dialog.ui  window.ui  window.ui.in
data/resources/ui/gtk/: help-overlay.ui
po/: LINGUAS  POTFILES.in  az.po  be.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  gnome-icon-preview.pot  hi.po  hr.po  hu.po  id.po  it.po  ka.po  kab.po  ko.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  uz.po  zh_CN.po
src/: application.rs  colour.ui  common.rs  common.vala  config.vala.in  export.ui  export.vala  help-overlay.ui  icons.vala  inital.ui  inital.vala  main.rs  main.vala  menus.ui  meson.build  newwindow.ui  object_wrapper.rs  palette.gpl  palette.gresource.xml  palette.ui  palette.vala  pane.ui  pane.vala  project.rs  recentrow.ui  recents.rs  recents.ui  recents.vala  resource.gresource.xml  saver.ui  saver.vala  settings.rs  style.css  symbolic.vala  window.ui  window.vala  wizard.ui  wizard.vala
src/exporter/: colour.ui  colour.vala  exporter.ui  exporter.vala  symbolic.ui  symbolic.vala
src/icons/: icons.gresource.xml
src/views/: colour.ui  colour.vala  colourpane.ui  colourpane.vala  columns.vala  initial.ui  initial.vala  pane.ui  pane.vala  symbolic.vala  symbolicpane.ui  symbolicpane.vala  utils.vala
src/wallpapers/: wallpapers.gresource.xml
src/widgets/: colour_pane.rs  export.rs  icon.rs  mod.rs  new_project.rs  project_previewer.rs  screenshot_dialog.rs  window.rs
src/widgets/recents/: item.rs  mod.rs  popover.rs
