[package]
name = "app-icon-preview"
version = "3.1.0"
authors = ["Bilal Elmoussaoui <bilal.elmoussaoui@gnome.org>"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
gtk = { version = "0.4", package = "gtk4", features = ["v4_6"] }
log = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk-macros = "0.3"
adw = { version = "0.1.0", package = "libadwaita" }
pretty_env_logger = "0.3"
cairo = { version = "0.15", package = "cairo-rs", features = ["svg", "v1_16"] }
rand = "0.7"
svgcleaner = "0.9"
anyhow = "1.0"
once_cell = "1.9"

[dependencies.rsvg]
package = "librsvg"
git = "https://gitlab.gnome.org/gnome/librsvg"
